// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.ane69xz,html.ane69xz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="tokuiy0 _16bxc0w18 _16bxc0w1b">
+        <div class="lgtsqz0 ane69x7i ane69x6e ane69x9q ane69x8m ane69x5e _16bxc0w18 _16bxc0w1b ane69x32 ane69x35">
+          <span class="lgtsqz0 ane69x4y _16bxc0w0 _16bxc0w1 _16bxc0w21 uo8yjc4 _16bxc0wd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .lgtsqz0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .lgtsqz0 {
  outline: none;
}
.lgtsqz1 {
  display: block;
}
.lgtsqz2 {
  line-height: 1;
}
.lgtsqz3 {
  list-style: none;
}
.lgtsqz4 {
  quotes: none;
}
.lgtsqz4:after,
.lgtsqz4:before {
  content: "";
}
.lgtsqz5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.lgtsqz6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.lgtsqz7 {
  background-color: transparent;
}
.lgtsqz9 {
  color: inherit;
}
.lgtsqza:disabled {
  opacity: 1;
}
.lgtsqza::-ms-expand {
  display: none;
}
.lgtsqzc[type="number"] {
  -moz-appearance: textfield;
}
.lgtsqzc[type="number"]::-webkit-inner-spin-button,
.lgtsqzc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.lgtsqzc::-ms-clear {
  display: none;
}
.lgtsqzc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.lgtsqzf {
  color: inherit;
  text-decoration: none;
}
.ane69x0 {
  overflow: hidden;
}
.ane69x1 {
  overflow: scroll;
}
.ane69x2 {
  overflow: visible;
}
.ane69x3 {
  overflow: auto;
}
.ane69x4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.ane69x5 {
  outline: none;
}
.ane69x6 {
  opacity: 0;
}
.ane69x7 {
  z-index: 0;
}
.ane69x8 {
  z-index: 1;
}
.ane69x9 {
  z-index: 2;
}
.ane69xa {
  z-index: 90;
}
.ane69xb {
  z-index: 100;
}
.ane69xc {
  z-index: 200;
}
.ane69xd {
  z-index: 290;
}
.ane69xe {
  z-index: 300;
}
.ane69xf {
  z-index: 400;
}
.ane69xg {
  cursor: default;
}
.ane69xh {
  cursor: pointer;
}
.ane69xi {
  pointer-events: none;
}
.ane69xj {
  top: 0;
}
.ane69xk {
  bottom: 0;
}
.ane69xl {
  left: 0;
}
.ane69xm {
  right: 0;
}
.ane69xn {
  height: 100%;
}
.ane69xo {
  height: var(--ko0op49);
}
.ane69xp {
  width: 100%;
}
.ane69xq {
  width: var(--ko0op49);
}
.ane69xr {
  min-width: 0;
}
.ane69xs {
  max-width: var(--ko0op411);
}
.ane69xt {
  max-width: var(--ko0op412);
}
.ane69xu {
  max-width: var(--ko0op413);
}
.ane69xv {
  max-width: var(--ko0op414);
}
.ane69xw {
  transition: var(--ko0op45i);
}
.ane69xx {
  transition: var(--ko0op45j);
}
.ane69xy:active {
  transform: var(--ko0op45k);
}
html.ane69xz .ane69x11,
html:not(.ane69xz) .ane69x10 {
  background: var(--ko0op41t);
}
html.ane69xz .ane69x13,
html:not(.ane69xz) .ane69x12 {
  background: var(--ko0op41u);
}
html.ane69xz .ane69x15,
html:not(.ane69xz) .ane69x14 {
  background: var(--ko0op41v);
}
html.ane69xz .ane69x17,
html:not(.ane69xz) .ane69x16 {
  background: var(--ko0op41w);
}
html.ane69xz .ane69x19,
html:not(.ane69xz) .ane69x18 {
  background: var(--ko0op41x);
}
html.ane69xz .ane69x1b,
html:not(.ane69xz) .ane69x1a {
  background: var(--ko0op41y);
}
html.ane69xz .ane69x1d,
html:not(.ane69xz) .ane69x1c {
  background: var(--ko0op41z);
}
html.ane69xz .ane69x1f,
html:not(.ane69xz) .ane69x1e {
  background: var(--ko0op420);
}
html.ane69xz .ane69x1h,
html:not(.ane69xz) .ane69x1g {
  background: var(--ko0op421);
}
html.ane69xz .ane69x1j,
html:not(.ane69xz) .ane69x1i {
  background: var(--ko0op422);
}
html.ane69xz .ane69x1l,
html:not(.ane69xz) .ane69x1k {
  background: var(--ko0op423);
}
html.ane69xz .ane69x1n,
html:not(.ane69xz) .ane69x1m {
  background: var(--ko0op424);
}
html.ane69xz .ane69x1p,
html:not(.ane69xz) .ane69x1o {
  background: var(--ko0op425);
}
html.ane69xz .ane69x1r,
html:not(.ane69xz) .ane69x1q {
  background: var(--ko0op426);
}
html.ane69xz .ane69x1t,
html:not(.ane69xz) .ane69x1s {
  background: var(--ko0op427);
}
html.ane69xz .ane69x1v,
html:not(.ane69xz) .ane69x1u {
  background: var(--ko0op428);
}
html.ane69xz .ane69x1x,
html:not(.ane69xz) .ane69x1w {
  background: var(--ko0op429);
}
html.ane69xz .ane69x1z,
html:not(.ane69xz) .ane69x1y {
  background: var(--ko0op42a);
}
html.ane69xz .ane69x21,
html:not(.ane69xz) .ane69x20 {
  background: var(--ko0op42b);
}
html.ane69xz .ane69x23,
html:not(.ane69xz) .ane69x22 {
  background: var(--ko0op42c);
}
html.ane69xz .ane69x25,
html:not(.ane69xz) .ane69x24 {
  background: var(--ko0op42d);
}
html.ane69xz .ane69x27,
html:not(.ane69xz) .ane69x26 {
  background: var(--ko0op42e);
}
html.ane69xz .ane69x29,
html:not(.ane69xz) .ane69x28 {
  background: var(--ko0op42f);
}
html.ane69xz .ane69x2b,
html:not(.ane69xz) .ane69x2a {
  background: var(--ko0op42g);
}
html.ane69xz .ane69x2d,
html:not(.ane69xz) .ane69x2c {
  background: var(--ko0op42h);
}
html.ane69xz .ane69x2f,
html:not(.ane69xz) .ane69x2e {
  background: var(--ko0op42i);
}
html.ane69xz .ane69x2h,
html:not(.ane69xz) .ane69x2g {
  background: var(--ko0op42j);
}
html.ane69xz .ane69x2j,
html:not(.ane69xz) .ane69x2i {
  background: var(--ko0op42k);
}
html.ane69xz .ane69x2l,
html:not(.ane69xz) .ane69x2k {
  background: var(--ko0op42l);
}
html.ane69xz .ane69x2n,
html:not(.ane69xz) .ane69x2m {
  background: var(--ko0op42m);
}
html.ane69xz .ane69x2p,
html:not(.ane69xz) .ane69x2o {
  background: var(--ko0op42n);
}
html.ane69xz .ane69x2r,
html:not(.ane69xz) .ane69x2q {
  background: var(--ko0op42o);
}
html.ane69xz .ane69x2t,
html:not(.ane69xz) .ane69x2s {
  background: var(--ko0op42p);
}
html.ane69xz .ane69x2v,
html:not(.ane69xz) .ane69x2u {
  background: var(--ko0op42q);
}
html.ane69xz .ane69x2x,
html:not(.ane69xz) .ane69x2w {
  background: var(--ko0op42r);
}
html.ane69xz .ane69x2z,
html:not(.ane69xz) .ane69x2y {
  background: var(--ko0op42s);
}
html.ane69xz .ane69x31,
html:not(.ane69xz) .ane69x30 {
  background: var(--ko0op42t);
}
html.ane69xz .ane69x33,
html:not(.ane69xz) .ane69x32 {
  background: var(--ko0op42u);
}
html.ane69xz .ane69x35,
html:not(.ane69xz) .ane69x34 {
  background: var(--ko0op42v);
}
html.ane69xz .ane69x37,
html:not(.ane69xz) .ane69x36 {
  box-shadow: var(--ko0op45l);
}
html.ane69xz .ane69x39,
html:not(.ane69xz) .ane69x38 {
  box-shadow: var(--ko0op45m);
}
html.ane69xz .ane69x3b,
html:not(.ane69xz) .ane69x3a {
  box-shadow: var(--ko0op45n);
}
html.ane69xz .ane69x3d,
html:not(.ane69xz) .ane69x3c {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4f);
}
html.ane69xz .ane69x3f,
html:not(.ane69xz) .ane69x3e {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4g);
}
html.ane69xz .ane69x3h,
html:not(.ane69xz) .ane69x3g {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4f);
}
html.ane69xz .ane69x3j,
html:not(.ane69xz) .ane69x3i {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4g);
}
html.ane69xz .ane69x3l,
html:not(.ane69xz) .ane69x3k {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4h);
}
html.ane69xz .ane69x3n,
html:not(.ane69xz) .ane69x3m {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4i);
}
html.ane69xz .ane69x3p,
html:not(.ane69xz) .ane69x3o {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4j);
}
html.ane69xz .ane69x3r,
html:not(.ane69xz) .ane69x3q {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4j);
}
html.ane69xz .ane69x3t,
html:not(.ane69xz) .ane69x3s {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4k);
}
html.ane69xz .ane69x3v,
html:not(.ane69xz) .ane69x3u {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4k);
}
html.ane69xz .ane69x3x,
html:not(.ane69xz) .ane69x3w {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4l);
}
html.ane69xz .ane69x3z,
html:not(.ane69xz) .ane69x3y {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4n);
}
html.ane69xz .ane69x41,
html:not(.ane69xz) .ane69x40 {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4n);
}
html.ane69xz .ane69x43,
html:not(.ane69xz) .ane69x42 {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4o);
}
html.ane69xz .ane69x45,
html:not(.ane69xz) .ane69x44 {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4o);
}
html.ane69xz .ane69x47,
html:not(.ane69xz) .ane69x46 {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4p);
}
html.ane69xz .ane69x49,
html:not(.ane69xz) .ane69x48 {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4q);
}
html.ane69xz .ane69x4b,
html:not(.ane69xz) .ane69x4a {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4r);
}
html.ane69xz .ane69x4d,
html:not(.ane69xz) .ane69x4c {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4r);
}
html.ane69xz .ane69x4f,
html:not(.ane69xz) .ane69x4e {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4s);
}
html.ane69xz .ane69x4h,
html:not(.ane69xz) .ane69x4g {
  box-shadow: inset 0 0 0 var(--ko0op4z) var(--ko0op4s);
}
html.ane69xz .ane69x4j,
html:not(.ane69xz) .ane69x4i {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4t);
}
html.ane69xz .ane69x4l,
html:not(.ane69xz) .ane69x4k {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4u);
}
html.ane69xz .ane69x4n,
html:not(.ane69xz) .ane69x4m {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4v);
}
html.ane69xz .ane69x4p,
html:not(.ane69xz) .ane69x4o {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4w);
}
html.ane69xz .ane69x4r,
html:not(.ane69xz) .ane69x4q {
  box-shadow: inset 0 0 0 var(--ko0op4y) var(--ko0op4x);
}
html.ane69xz .ane69x4t,
html:not(.ane69xz) .ane69x4s {
  box-shadow: 0 0 0 var(--ko0op410) var(--ko0op4m);
}
.ane69x4u {
  display: none;
}
.ane69x4y {
  display: block;
}
.ane69x52 {
  display: inline;
}
.ane69x56 {
  display: inline-block;
}
.ane69x5a {
  display: flex;
}
.ane69x5e {
  position: relative;
}
.ane69x5i {
  position: absolute;
}
.ane69x5m {
  position: fixed;
}
.ane69x5q {
  border-radius: 0;
}
.ane69x5u {
  border-radius: 9999px;
}
.ane69x5y {
  border-radius: var(--ko0op4b);
}
.ane69x62 {
  border-radius: var(--ko0op4c);
}
.ane69x66 {
  border-radius: var(--ko0op4d);
}
.ane69x6a {
  border-radius: var(--ko0op4e);
}
.ane69x6e {
  padding-top: var(--ko0op40);
}
.ane69x6i {
  padding-top: var(--ko0op41);
}
.ane69x6m {
  padding-top: var(--ko0op42);
}
.ane69x6q {
  padding-top: var(--ko0op43);
}
.ane69x6u {
  padding-top: var(--ko0op44);
}
.ane69x6y {
  padding-top: var(--ko0op45);
}
.ane69x72 {
  padding-top: var(--ko0op46);
}
.ane69x76 {
  padding-top: var(--ko0op47);
}
.ane69x7a {
  padding-top: var(--ko0op48);
}
.ane69x7e {
  padding-top: 0;
}
.ane69x7i {
  padding-bottom: var(--ko0op40);
}
.ane69x7m {
  padding-bottom: var(--ko0op41);
}
.ane69x7q {
  padding-bottom: var(--ko0op42);
}
.ane69x7u {
  padding-bottom: var(--ko0op43);
}
.ane69x7y {
  padding-bottom: var(--ko0op44);
}
.ane69x82 {
  padding-bottom: var(--ko0op45);
}
.ane69x86 {
  padding-bottom: var(--ko0op46);
}
.ane69x8a {
  padding-bottom: var(--ko0op47);
}
.ane69x8e {
  padding-bottom: var(--ko0op48);
}
.ane69x8i {
  padding-bottom: 0;
}
.ane69x8m {
  padding-right: var(--ko0op40);
}
.ane69x8q {
  padding-right: var(--ko0op41);
}
.ane69x8u {
  padding-right: var(--ko0op42);
}
.ane69x8y {
  padding-right: var(--ko0op43);
}
.ane69x92 {
  padding-right: var(--ko0op44);
}
.ane69x96 {
  padding-right: var(--ko0op45);
}
.ane69x9a {
  padding-right: var(--ko0op46);
}
.ane69x9e {
  padding-right: var(--ko0op47);
}
.ane69x9i {
  padding-right: var(--ko0op48);
}
.ane69x9m {
  padding-right: 0;
}
.ane69x9q {
  padding-left: var(--ko0op40);
}
.ane69x9u {
  padding-left: var(--ko0op41);
}
.ane69x9y {
  padding-left: var(--ko0op42);
}
.ane69xa2 {
  padding-left: var(--ko0op43);
}
.ane69xa6 {
  padding-left: var(--ko0op44);
}
.ane69xaa {
  padding-left: var(--ko0op45);
}
.ane69xae {
  padding-left: var(--ko0op46);
}
.ane69xai {
  padding-left: var(--ko0op47);
}
.ane69xam {
  padding-left: var(--ko0op48);
}
.ane69xaq {
  padding-left: 0;
}
.ane69xau {
  margin-top: var(--ko0op40);
}
.ane69xay {
  margin-top: var(--ko0op41);
}
.ane69xb2 {
  margin-top: var(--ko0op42);
}
.ane69xb6 {
  margin-top: var(--ko0op43);
}
.ane69xba {
  margin-top: var(--ko0op44);
}
.ane69xbe {
  margin-top: var(--ko0op45);
}
.ane69xbi {
  margin-top: var(--ko0op46);
}
.ane69xbm {
  margin-top: var(--ko0op47);
}
.ane69xbq {
  margin-top: var(--ko0op48);
}
.ane69xbu {
  margin-top: 0;
}
.ane69xby {
  margin-bottom: var(--ko0op40);
}
.ane69xc2 {
  margin-bottom: var(--ko0op41);
}
.ane69xc6 {
  margin-bottom: var(--ko0op42);
}
.ane69xca {
  margin-bottom: var(--ko0op43);
}
.ane69xce {
  margin-bottom: var(--ko0op44);
}
.ane69xci {
  margin-bottom: var(--ko0op45);
}
.ane69xcm {
  margin-bottom: var(--ko0op46);
}
.ane69xcq {
  margin-bottom: var(--ko0op47);
}
.ane69xcu {
  margin-bottom: var(--ko0op48);
}
.ane69xcy {
  margin-bottom: 0;
}
.ane69xd2 {
  margin-right: var(--ko0op40);
}
.ane69xd6 {
  margin-right: var(--ko0op41);
}
.ane69xda {
  margin-right: var(--ko0op42);
}
.ane69xde {
  margin-right: var(--ko0op43);
}
.ane69xdi {
  margin-right: var(--ko0op44);
}
.ane69xdm {
  margin-right: var(--ko0op45);
}
.ane69xdq {
  margin-right: var(--ko0op46);
}
.ane69xdu {
  margin-right: var(--ko0op47);
}
.ane69xdy {
  margin-right: var(--ko0op48);
}
.ane69xe2 {
  margin-right: 0;
}
.ane69xe6 {
  margin-left: var(--ko0op40);
}
.ane69xea {
  margin-left: var(--ko0op41);
}
.ane69xee {
  margin-left: var(--ko0op42);
}
.ane69xei {
  margin-left: var(--ko0op43);
}
.ane69xem {
  margin-left: var(--ko0op44);
}
.ane69xeq {
  margin-left: var(--ko0op45);
}
.ane69xeu {
  margin-left: var(--ko0op46);
}
.ane69xey {
  margin-left: var(--ko0op47);
}
.ane69xf2 {
  margin-left: var(--ko0op48);
}
.ane69xf6 {
  margin-left: 0;
}
.ane69xfa {
  align-items: flex-start;
}
.ane69xfe {
  align-items: center;
}
.ane69xfi {
  align-items: flex-end;
}
.ane69xfm {
  justify-content: flex-start;
}
.ane69xfq {
  justify-content: center;
}
.ane69xfu {
  justify-content: flex-end;
}
.ane69xfy {
  justify-content: space-between;
}
.ane69xg2 {
  flex-direction: row;
}
.ane69xg6 {
  flex-direction: row-reverse;
}
.ane69xga {
  flex-direction: column;
}
.ane69xge {
  flex-direction: column-reverse;
}
.ane69xgi {
  flex-wrap: wrap;
}
.ane69xgm {
  flex-wrap: nowrap;
}
.ane69xgq {
  flex-shrink: 0;
}
.ane69xgu {
  flex-grow: 0;
}
.ane69xgy {
  flex-grow: 1;
}
.ane69xh2 {
  text-align: left;
}
.ane69xh6 {
  text-align: center;
}
.ane69xha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .ane69x4v {
    display: none;
  }
  .ane69x4z {
    display: block;
  }
  .ane69x53 {
    display: inline;
  }
  .ane69x57 {
    display: inline-block;
  }
  .ane69x5b {
    display: flex;
  }
  .ane69x5f {
    position: relative;
  }
  .ane69x5j {
    position: absolute;
  }
  .ane69x5n {
    position: fixed;
  }
  .ane69x5r {
    border-radius: 0;
  }
  .ane69x5v {
    border-radius: 9999px;
  }
  .ane69x5z {
    border-radius: var(--ko0op4b);
  }
  .ane69x63 {
    border-radius: var(--ko0op4c);
  }
  .ane69x67 {
    border-radius: var(--ko0op4d);
  }
  .ane69x6b {
    border-radius: var(--ko0op4e);
  }
  .ane69x6f {
    padding-top: var(--ko0op40);
  }
  .ane69x6j {
    padding-top: var(--ko0op41);
  }
  .ane69x6n {
    padding-top: var(--ko0op42);
  }
  .ane69x6r {
    padding-top: var(--ko0op43);
  }
  .ane69x6v {
    padding-top: var(--ko0op44);
  }
  .ane69x6z {
    padding-top: var(--ko0op45);
  }
  .ane69x73 {
    padding-top: var(--ko0op46);
  }
  .ane69x77 {
    padding-top: var(--ko0op47);
  }
  .ane69x7b {
    padding-top: var(--ko0op48);
  }
  .ane69x7f {
    padding-top: 0;
  }
  .ane69x7j {
    padding-bottom: var(--ko0op40);
  }
  .ane69x7n {
    padding-bottom: var(--ko0op41);
  }
  .ane69x7r {
    padding-bottom: var(--ko0op42);
  }
  .ane69x7v {
    padding-bottom: var(--ko0op43);
  }
  .ane69x7z {
    padding-bottom: var(--ko0op44);
  }
  .ane69x83 {
    padding-bottom: var(--ko0op45);
  }
  .ane69x87 {
    padding-bottom: var(--ko0op46);
  }
  .ane69x8b {
    padding-bottom: var(--ko0op47);
  }
  .ane69x8f {
    padding-bottom: var(--ko0op48);
  }
  .ane69x8j {
    padding-bottom: 0;
  }
  .ane69x8n {
    padding-right: var(--ko0op40);
  }
  .ane69x8r {
    padding-right: var(--ko0op41);
  }
  .ane69x8v {
    padding-right: var(--ko0op42);
  }
  .ane69x8z {
    padding-right: var(--ko0op43);
  }
  .ane69x93 {
    padding-right: var(--ko0op44);
  }
  .ane69x97 {
    padding-right: var(--ko0op45);
  }
  .ane69x9b {
    padding-right: var(--ko0op46);
  }
  .ane69x9f {
    padding-right: var(--ko0op47);
  }
  .ane69x9j {
    padding-right: var(--ko0op48);
  }
  .ane69x9n {
    padding-right: 0;
  }
  .ane69x9r {
    padding-left: var(--ko0op40);
  }
  .ane69x9v {
    padding-left: var(--ko0op41);
  }
  .ane69x9z {
    padding-left: var(--ko0op42);
  }
  .ane69xa3 {
    padding-left: var(--ko0op43);
  }
  .ane69xa7 {
    padding-left: var(--ko0op44);
  }
  .ane69xab {
    padding-left: var(--ko0op45);
  }
  .ane69xaf {
    padding-left: var(--ko0op46);
  }
  .ane69xaj {
    padding-left: var(--ko0op47);
  }
  .ane69xan {
    padding-left: var(--ko0op48);
  }
  .ane69xar {
    padding-left: 0;
  }
  .ane69xav {
    margin-top: var(--ko0op40);
  }
  .ane69xaz {
    margin-top: var(--ko0op41);
  }
  .ane69xb3 {
    margin-top: var(--ko0op42);
  }
  .ane69xb7 {
    margin-top: var(--ko0op43);
  }
  .ane69xbb {
    margin-top: var(--ko0op44);
  }
  .ane69xbf {
    margin-top: var(--ko0op45);
  }
  .ane69xbj {
    margin-top: var(--ko0op46);
  }
  .ane69xbn {
    margin-top: var(--ko0op47);
  }
  .ane69xbr {
    margin-top: var(--ko0op48);
  }
  .ane69xbv {
    margin-top: 0;
  }
  .ane69xbz {
    margin-bottom: var(--ko0op40);
  }
  .ane69xc3 {
    margin-bottom: var(--ko0op41);
  }
  .ane69xc7 {
    margin-bottom: var(--ko0op42);
  }
  .ane69xcb {
    margin-bottom: var(--ko0op43);
  }
  .ane69xcf {
    margin-bottom: var(--ko0op44);
  }
  .ane69xcj {
    margin-bottom: var(--ko0op45);
  }
  .ane69xcn {
    margin-bottom: var(--ko0op46);
  }
  .ane69xcr {
    margin-bottom: var(--ko0op47);
  }
  .ane69xcv {
    margin-bottom: var(--ko0op48);
  }
  .ane69xcz {
    margin-bottom: 0;
  }
  .ane69xd3 {
    margin-right: var(--ko0op40);
  }
  .ane69xd7 {
    margin-right: var(--ko0op41);
  }
  .ane69xdb {
    margin-right: var(--ko0op42);
  }
  .ane69xdf {
    margin-right: var(--ko0op43);
  }
  .ane69xdj {
    margin-right: var(--ko0op44);
  }
  .ane69xdn {
    margin-right: var(--ko0op45);
  }
  .ane69xdr {
    margin-right: var(--ko0op46);
  }
  .ane69xdv {
    margin-right: var(--ko0op47);
  }
  .ane69xdz {
    margin-right: var(--ko0op48);
  }
  .ane69xe3 {
    margin-right: 0;
  }
  .ane69xe7 {
    margin-left: var(--ko0op40);
  }
  .ane69xeb {
    margin-left: var(--ko0op41);
  }
  .ane69xef {
    margin-left: var(--ko0op42);
  }
  .ane69xej {
    margin-left: var(--ko0op43);
  }
  .ane69xen {
    margin-left: var(--ko0op44);
  }
  .ane69xer {
    margin-left: var(--ko0op45);
  }
  .ane69xev {
    margin-left: var(--ko0op46);
  }
  .ane69xez {
    margin-left: var(--ko0op47);
  }
  .ane69xf3 {
    margin-left: var(--ko0op48);
  }
  .ane69xf7 {
    margin-left: 0;
  }
  .ane69xfb {
    align-items: flex-start;
  }
  .ane69xff {
    align-items: center;
  }
  .ane69xfj {
    align-items: flex-end;
  }
  .ane69xfn {
    justify-content: flex-start;
  }
  .ane69xfr {
    justify-content: center;
  }
  .ane69xfv {
    justify-content: flex-end;
  }
  .ane69xfz {
    justify-content: space-between;
  }
  .ane69xg3 {
    flex-direction: row;
  }
  .ane69xg7 {
    flex-direction: row-reverse;
  }
  .ane69xgb {
    flex-direction: column;
  }
  .ane69xgf {
    flex-direction: column-reverse;
  }
  .ane69xgj {
    flex-wrap: wrap;
  }
  .ane69xgn {
    flex-wrap: nowrap;
  }
  .ane69xgr {
    flex-shrink: 0;
  }
  .ane69xgv {
    flex-grow: 0;
  }
  .ane69xgz {
    flex-grow: 1;
  }
  .ane69xh3 {
    text-align: left;
  }
  .ane69xh7 {
    text-align: center;
  }
  .ane69xhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .ane69x4w {
    display: none;
  }
  .ane69x50 {
    display: block;
  }
  .ane69x54 {
    display: inline;
  }
  .ane69x58 {
    display: inline-block;
  }
  .ane69x5c {
    display: flex;
  }
  .ane69x5g {
    position: relative;
  }
  .ane69x5k {
    position: absolute;
  }
  .ane69x5o {
    position: fixed;
  }
  .ane69x5s {
    border-radius: 0;
  }
  .ane69x5w {
    border-radius: 9999px;
  }
  .ane69x60 {
    border-radius: var(--ko0op4b);
  }
  .ane69x64 {
    border-radius: var(--ko0op4c);
  }
  .ane69x68 {
    border-radius: var(--ko0op4d);
  }
  .ane69x6c {
    border-radius: var(--ko0op4e);
  }
  .ane69x6g {
    padding-top: var(--ko0op40);
  }
  .ane69x6k {
    padding-top: var(--ko0op41);
  }
  .ane69x6o {
    padding-top: var(--ko0op42);
  }
  .ane69x6s {
    padding-top: var(--ko0op43);
  }
  .ane69x6w {
    padding-top: var(--ko0op44);
  }
  .ane69x70 {
    padding-top: var(--ko0op45);
  }
  .ane69x74 {
    padding-top: var(--ko0op46);
  }
  .ane69x78 {
    padding-top: var(--ko0op47);
  }
  .ane69x7c {
    padding-top: var(--ko0op48);
  }
  .ane69x7g {
    padding-top: 0;
  }
  .ane69x7k {
    padding-bottom: var(--ko0op40);
  }
  .ane69x7o {
    padding-bottom: var(--ko0op41);
  }
  .ane69x7s {
    padding-bottom: var(--ko0op42);
  }
  .ane69x7w {
    padding-bottom: var(--ko0op43);
  }
  .ane69x80 {
    padding-bottom: var(--ko0op44);
  }
  .ane69x84 {
    padding-bottom: var(--ko0op45);
  }
  .ane69x88 {
    padding-bottom: var(--ko0op46);
  }
  .ane69x8c {
    padding-bottom: var(--ko0op47);
  }
  .ane69x8g {
    padding-bottom: var(--ko0op48);
  }
  .ane69x8k {
    padding-bottom: 0;
  }
  .ane69x8o {
    padding-right: var(--ko0op40);
  }
  .ane69x8s {
    padding-right: var(--ko0op41);
  }
  .ane69x8w {
    padding-right: var(--ko0op42);
  }
  .ane69x90 {
    padding-right: var(--ko0op43);
  }
  .ane69x94 {
    padding-right: var(--ko0op44);
  }
  .ane69x98 {
    padding-right: var(--ko0op45);
  }
  .ane69x9c {
    padding-right: var(--ko0op46);
  }
  .ane69x9g {
    padding-right: var(--ko0op47);
  }
  .ane69x9k {
    padding-right: var(--ko0op48);
  }
  .ane69x9o {
    padding-right: 0;
  }
  .ane69x9s {
    padding-left: var(--ko0op40);
  }
  .ane69x9w {
    padding-left: var(--ko0op41);
  }
  .ane69xa0 {
    padding-left: var(--ko0op42);
  }
  .ane69xa4 {
    padding-left: var(--ko0op43);
  }
  .ane69xa8 {
    padding-left: var(--ko0op44);
  }
  .ane69xac {
    padding-left: var(--ko0op45);
  }
  .ane69xag {
    padding-left: var(--ko0op46);
  }
  .ane69xak {
    padding-left: var(--ko0op47);
  }
  .ane69xao {
    padding-left: var(--ko0op48);
  }
  .ane69xas {
    padding-left: 0;
  }
  .ane69xaw {
    margin-top: var(--ko0op40);
  }
  .ane69xb0 {
    margin-top: var(--ko0op41);
  }
  .ane69xb4 {
    margin-top: var(--ko0op42);
  }
  .ane69xb8 {
    margin-top: var(--ko0op43);
  }
  .ane69xbc {
    margin-top: var(--ko0op44);
  }
  .ane69xbg {
    margin-top: var(--ko0op45);
  }
  .ane69xbk {
    margin-top: var(--ko0op46);
  }
  .ane69xbo {
    margin-top: var(--ko0op47);
  }
  .ane69xbs {
    margin-top: var(--ko0op48);
  }
  .ane69xbw {
    margin-top: 0;
  }
  .ane69xc0 {
    margin-bottom: var(--ko0op40);
  }
  .ane69xc4 {
    margin-bottom: var(--ko0op41);
  }
  .ane69xc8 {
    margin-bottom: var(--ko0op42);
  }
  .ane69xcc {
    margin-bottom: var(--ko0op43);
  }
  .ane69xcg {
    margin-bottom: var(--ko0op44);
  }
  .ane69xck {
    margin-bottom: var(--ko0op45);
  }
  .ane69xco {
    margin-bottom: var(--ko0op46);
  }
  .ane69xcs {
    margin-bottom: var(--ko0op47);
  }
  .ane69xcw {
    margin-bottom: var(--ko0op48);
  }
  .ane69xd0 {
    margin-bottom: 0;
  }
  .ane69xd4 {
    margin-right: var(--ko0op40);
  }
  .ane69xd8 {
    margin-right: var(--ko0op41);
  }
  .ane69xdc {
    margin-right: var(--ko0op42);
  }
  .ane69xdg {
    margin-right: var(--ko0op43);
  }
  .ane69xdk {
    margin-right: var(--ko0op44);
  }
  .ane69xdo {
    margin-right: var(--ko0op45);
  }
  .ane69xds {
    margin-right: var(--ko0op46);
  }
  .ane69xdw {
    margin-right: var(--ko0op47);
  }
  .ane69xe0 {
    margin-right: var(--ko0op48);
  }
  .ane69xe4 {
    margin-right: 0;
  }
  .ane69xe8 {
    margin-left: var(--ko0op40);
  }
  .ane69xec {
    margin-left: var(--ko0op41);
  }
  .ane69xeg {
    margin-left: var(--ko0op42);
  }
  .ane69xek {
    margin-left: var(--ko0op43);
  }
  .ane69xeo {
    margin-left: var(--ko0op44);
  }
  .ane69xes {
    margin-left: var(--ko0op45);
  }
  .ane69xew {
    margin-left: var(--ko0op46);
  }
  .ane69xf0 {
    margin-left: var(--ko0op47);
  }
  .ane69xf4 {
    margin-left: var(--ko0op48);
  }
  .ane69xf8 {
    margin-left: 0;
  }
  .ane69xfc {
    align-items: flex-start;
  }
  .ane69xfg {
    align-items: center;
  }
  .ane69xfk {
    align-items: flex-end;
  }
  .ane69xfo {
    justify-content: flex-start;
  }
  .ane69xfs {
    justify-content: center;
  }
  .ane69xfw {
    justify-content: flex-end;
  }
  .ane69xg0 {
    justify-content: space-between;
  }
  .ane69xg4 {
    flex-direction: row;
  }
  .ane69xg8 {
    flex-direction: row-reverse;
  }
  .ane69xgc {
    flex-direction: column;
  }
  .ane69xgg {
    flex-direction: column-reverse;
  }
  .ane69xgk {
    flex-wrap: wrap;
  }
  .ane69xgo {
    flex-wrap: nowrap;
  }
  .ane69xgs {
    flex-shrink: 0;
  }
  .ane69xgw {
    flex-grow: 0;
  }
  .ane69xh0 {
    flex-grow: 1;
  }
  .ane69xh4 {
    text-align: left;
  }
  .ane69xh8 {
    text-align: center;
  }
  .ane69xhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .ane69x4x {
    display: none;
  }
  .ane69x51 {
    display: block;
  }
  .ane69x55 {
    display: inline;
  }
  .ane69x59 {
    display: inline-block;
  }
  .ane69x5d {
    display: flex;
  }
  .ane69x5h {
    position: relative;
  }
  .ane69x5l {
    position: absolute;
  }
  .ane69x5p {
    position: fixed;
  }
  .ane69x5t {
    border-radius: 0;
  }
  .ane69x5x {
    border-radius: 9999px;
  }
  .ane69x61 {
    border-radius: var(--ko0op4b);
  }
  .ane69x65 {
    border-radius: var(--ko0op4c);
  }
  .ane69x69 {
    border-radius: var(--ko0op4d);
  }
  .ane69x6d {
    border-radius: var(--ko0op4e);
  }
  .ane69x6h {
    padding-top: var(--ko0op40);
  }
  .ane69x6l {
    padding-top: var(--ko0op41);
  }
  .ane69x6p {
    padding-top: var(--ko0op42);
  }
  .ane69x6t {
    padding-top: var(--ko0op43);
  }
  .ane69x6x {
    padding-top: var(--ko0op44);
  }
  .ane69x71 {
    padding-top: var(--ko0op45);
  }
  .ane69x75 {
    padding-top: var(--ko0op46);
  }
  .ane69x79 {
    padding-top: var(--ko0op47);
  }
  .ane69x7d {
    padding-top: var(--ko0op48);
  }
  .ane69x7h {
    padding-top: 0;
  }
  .ane69x7l {
    padding-bottom: var(--ko0op40);
  }
  .ane69x7p {
    padding-bottom: var(--ko0op41);
  }
  .ane69x7t {
    padding-bottom: var(--ko0op42);
  }
  .ane69x7x {
    padding-bottom: var(--ko0op43);
  }
  .ane69x81 {
    padding-bottom: var(--ko0op44);
  }
  .ane69x85 {
    padding-bottom: var(--ko0op45);
  }
  .ane69x89 {
    padding-bottom: var(--ko0op46);
  }
  .ane69x8d {
    padding-bottom: var(--ko0op47);
  }
  .ane69x8h {
    padding-bottom: var(--ko0op48);
  }
  .ane69x8l {
    padding-bottom: 0;
  }
  .ane69x8p {
    padding-right: var(--ko0op40);
  }
  .ane69x8t {
    padding-right: var(--ko0op41);
  }
  .ane69x8x {
    padding-right: var(--ko0op42);
  }
  .ane69x91 {
    padding-right: var(--ko0op43);
  }
  .ane69x95 {
    padding-right: var(--ko0op44);
  }
  .ane69x99 {
    padding-right: var(--ko0op45);
  }
  .ane69x9d {
    padding-right: var(--ko0op46);
  }
  .ane69x9h {
    padding-right: var(--ko0op47);
  }
  .ane69x9l {
    padding-right: var(--ko0op48);
  }
  .ane69x9p {
    padding-right: 0;
  }
  .ane69x9t {
    padding-left: var(--ko0op40);
  }
  .ane69x9x {
    padding-left: var(--ko0op41);
  }
  .ane69xa1 {
    padding-left: var(--ko0op42);
  }
  .ane69xa5 {
    padding-left: var(--ko0op43);
  }
  .ane69xa9 {
    padding-left: var(--ko0op44);
  }
  .ane69xad {
    padding-left: var(--ko0op45);
  }
  .ane69xah {
    padding-left: var(--ko0op46);
  }
  .ane69xal {
    padding-left: var(--ko0op47);
  }
  .ane69xap {
    padding-left: var(--ko0op48);
  }
  .ane69xat {
    padding-left: 0;
  }
  .ane69xax {
    margin-top: var(--ko0op40);
  }
  .ane69xb1 {
    margin-top: var(--ko0op41);
  }
  .ane69xb5 {
    margin-top: var(--ko0op42);
  }
  .ane69xb9 {
    margin-top: var(--ko0op43);
  }
  .ane69xbd {
    margin-top: var(--ko0op44);
  }
  .ane69xbh {
    margin-top: var(--ko0op45);
  }
  .ane69xbl {
    margin-top: var(--ko0op46);
  }
  .ane69xbp {
    margin-top: var(--ko0op47);
  }
  .ane69xbt {
    margin-top: var(--ko0op48);
  }
  .ane69xbx {
    margin-top: 0;
  }
  .ane69xc1 {
    margin-bottom: var(--ko0op40);
  }
  .ane69xc5 {
    margin-bottom: var(--ko0op41);
  }
  .ane69xc9 {
    margin-bottom: var(--ko0op42);
  }
  .ane69xcd {
    margin-bottom: var(--ko0op43);
  }
  .ane69xch {
    margin-bottom: var(--ko0op44);
  }
  .ane69xcl {
    margin-bottom: var(--ko0op45);
  }
  .ane69xcp {
    margin-bottom: var(--ko0op46);
  }
  .ane69xct {
    margin-bottom: var(--ko0op47);
  }
  .ane69xcx {
    margin-bottom: var(--ko0op48);
  }
  .ane69xd1 {
    margin-bottom: 0;
  }
  .ane69xd5 {
    margin-right: var(--ko0op40);
  }
  .ane69xd9 {
    margin-right: var(--ko0op41);
  }
  .ane69xdd {
    margin-right: var(--ko0op42);
  }
  .ane69xdh {
    margin-right: var(--ko0op43);
  }
  .ane69xdl {
    margin-right: var(--ko0op44);
  }
  .ane69xdp {
    margin-right: var(--ko0op45);
  }
  .ane69xdt {
    margin-right: var(--ko0op46);
  }
  .ane69xdx {
    margin-right: var(--ko0op47);
  }
  .ane69xe1 {
    margin-right: var(--ko0op48);
  }
  .ane69xe5 {
    margin-right: 0;
  }
  .ane69xe9 {
    margin-left: var(--ko0op40);
  }
  .ane69xed {
    margin-left: var(--ko0op41);
  }
  .ane69xeh {
    margin-left: var(--ko0op42);
  }
  .ane69xel {
    margin-left: var(--ko0op43);
  }
  .ane69xep {
    margin-left: var(--ko0op44);
  }
  .ane69xet {
    margin-left: var(--ko0op45);
  }
  .ane69xex {
    margin-left: var(--ko0op46);
  }
  .ane69xf1 {
    margin-left: var(--ko0op47);
  }
  .ane69xf5 {
    margin-left: var(--ko0op48);
  }
  .ane69xf9 {
    margin-left: 0;
  }
  .ane69xfd {
    align-items: flex-start;
  }
  .ane69xfh {
    align-items: center;
  }
  .ane69xfl {
    align-items: flex-end;
  }
  .ane69xfp {
    justify-content: flex-start;
  }
  .ane69xft {
    justify-content: center;
  }
  .ane69xfx {
    justify-content: flex-end;
  }
  .ane69xg1 {
    justify-content: space-between;
  }
  .ane69xg5 {
    flex-direction: row;
  }
  .ane69xg9 {
    flex-direction: row-reverse;
  }
  .ane69xgd {
    flex-direction: column;
  }
  .ane69xgh {
    flex-direction: column-reverse;
  }
  .ane69xgl {
    flex-wrap: wrap;
  }
  .ane69xgp {
    flex-wrap: nowrap;
  }
  .ane69xgt {
    flex-shrink: 0;
  }
  .ane69xgx {
    flex-grow: 0;
  }
  .ane69xh1 {
    flex-grow: 1;
  }
  .ane69xh5 {
    text-align: left;
  }
  .ane69xh9 {
    text-align: center;
  }
  .ane69xhd {
    text-align: right;
  }
}
.uo8yjc4 {
  font-size: var(--uo8yjc0);
  line-height: var(--uo8yjc1);
}
.uo8yjc4:before {
  content: "";
  display: table;
  margin-bottom: var(--uo8yjc2);
}
.uo8yjc4:after {
  content: "";
  display: table;
  margin-top: var(--uo8yjc3);
}
._16bxc0w0 {
  font-family: var(--ko0op42w);
}
._16bxc0w1 {
  font-weight: var(--ko0op446);
}
._16bxc0w2 {
  font-weight: var(--ko0op447);
}
._16bxc0w3 {
  font-weight: var(--ko0op448);
}
._16bxc0w4 {
  --uo8yjc0: var(--ko0op432);
  --uo8yjc1: var(--ko0op433);
  --uo8yjc2: var(--ko0op435);
  --uo8yjc3: var(--ko0op436);
}
._16bxc0w7 {
  --uo8yjc0: var(--ko0op43c);
  --uo8yjc1: var(--ko0op43d);
  --uo8yjc2: var(--ko0op43f);
  --uo8yjc3: var(--ko0op43g);
}
._16bxc0wa {
  --uo8yjc0: var(--ko0op43m);
  --uo8yjc1: var(--ko0op43n);
  --uo8yjc2: var(--ko0op43p);
  --uo8yjc3: var(--ko0op43q);
}
._16bxc0wd {
  --uo8yjc0: var(--ko0op43w);
  --uo8yjc1: var(--ko0op43x);
  --uo8yjc2: var(--ko0op43z);
  --uo8yjc3: var(--ko0op440);
}
._16bxc0wg {
  font-size: var(--ko0op432);
  line-height: var(--ko0op433);
}
._16bxc0wh {
  font-size: var(--ko0op43c);
  line-height: var(--ko0op43d);
}
._16bxc0wi {
  font-size: var(--ko0op43m);
  line-height: var(--ko0op43n);
}
._16bxc0wj {
  font-size: var(--ko0op43w);
  line-height: var(--ko0op43x);
}
._16bxc0wk {
  font-weight: var(--ko0op45d);
}
._16bxc0wl {
  font-weight: var(--ko0op45e);
}
._16bxc0wm {
  --uo8yjc0: var(--ko0op449);
  --uo8yjc1: var(--ko0op44a);
  --uo8yjc2: var(--ko0op44c);
  --uo8yjc3: var(--ko0op44d);
}
._16bxc0wp {
  --uo8yjc0: var(--ko0op44j);
  --uo8yjc1: var(--ko0op44k);
  --uo8yjc2: var(--ko0op44m);
  --uo8yjc3: var(--ko0op44n);
}
._16bxc0ws {
  --uo8yjc0: var(--ko0op44t);
  --uo8yjc1: var(--ko0op44u);
  --uo8yjc2: var(--ko0op44w);
  --uo8yjc3: var(--ko0op44x);
}
._16bxc0wv {
  --uo8yjc0: var(--ko0op453);
  --uo8yjc1: var(--ko0op454);
  --uo8yjc2: var(--ko0op456);
  --uo8yjc3: var(--ko0op457);
}
html:not(.ane69xz) ._16bxc0w18 {
  --_16bxc0wy: var(--ko0op419);
  --_16bxc0wz: var(--ko0op417);
  --_16bxc0w10: var(--ko0op41d);
  --_16bxc0w11: var(--ko0op41o);
  --_16bxc0w12: var(--ko0op41m);
  --_16bxc0w13: var(--ko0op415);
  --_16bxc0w14: var(--ko0op41b);
  --_16bxc0w15: var(--ko0op41k);
  --_16bxc0w16: var(--ko0op41r);
  --_16bxc0w17: var(--ko0op41f);
}
html:not(.ane69xz) ._16bxc0w19 {
  --_16bxc0wy: var(--ko0op41a);
  --_16bxc0wz: var(--ko0op418);
  --_16bxc0w10: var(--ko0op41e);
  --_16bxc0w11: var(--ko0op41p);
  --_16bxc0w12: var(--ko0op41n);
  --_16bxc0w13: var(--ko0op416);
  --_16bxc0w14: var(--ko0op41c);
  --_16bxc0w15: var(--ko0op41l);
  --_16bxc0w16: var(--ko0op41s);
  --_16bxc0w17: var(--ko0op41h);
}
html.ane69xz ._16bxc0w1a {
  --_16bxc0wy: var(--ko0op419);
  --_16bxc0wz: var(--ko0op417);
  --_16bxc0w10: var(--ko0op41d);
  --_16bxc0w11: var(--ko0op41o);
  --_16bxc0w12: var(--ko0op41m);
  --_16bxc0w13: var(--ko0op415);
  --_16bxc0w14: var(--ko0op41b);
  --_16bxc0w15: var(--ko0op41k);
  --_16bxc0w16: var(--ko0op41r);
  --_16bxc0w17: var(--ko0op41f);
}
html.ane69xz ._16bxc0w1b {
  --_16bxc0wy: var(--ko0op41a);
  --_16bxc0wz: var(--ko0op418);
  --_16bxc0w10: var(--ko0op41e);
  --_16bxc0w11: var(--ko0op41p);
  --_16bxc0w12: var(--ko0op41n);
  --_16bxc0w13: var(--ko0op416);
  --_16bxc0w14: var(--ko0op41c);
  --_16bxc0w15: var(--ko0op41l);
  --_16bxc0w16: var(--ko0op41s);
  --_16bxc0w17: var(--ko0op41h);
}
html:not(.ane69xz) ._16bxc0w1c,
html:not(.ane69xz) ._16bxc0w1d,
html:not(.ane69xz) ._16bxc0w1e,
html:not(.ane69xz) ._16bxc0w1f {
  --_16bxc0w15: var(--_16bxc0wy);
}
html:not(.ane69xz) ._16bxc0w1g,
html:not(.ane69xz) ._16bxc0w1h {
  --_16bxc0w15: var(--_16bxc0wz);
}
html:not(.ane69xz) ._16bxc0w1i {
  --_16bxc0w15: var(--_16bxc0w12);
}
html:not(.ane69xz) ._16bxc0w1j {
  --_16bxc0w15: var(--_16bxc0w10);
}
html:not(.ane69xz) ._16bxc0w1k {
  --_16bxc0w15: var(--_16bxc0w11);
}
html.ane69xz ._16bxc0w1l,
html.ane69xz ._16bxc0w1m,
html.ane69xz ._16bxc0w1n,
html.ane69xz ._16bxc0w1o {
  --_16bxc0w15: var(--_16bxc0wy);
}
html.ane69xz ._16bxc0w1p,
html.ane69xz ._16bxc0w1q {
  --_16bxc0w15: var(--_16bxc0wz);
}
html.ane69xz ._16bxc0w1r {
  --_16bxc0w15: var(--_16bxc0w12);
}
html.ane69xz ._16bxc0w1s {
  --_16bxc0w15: var(--_16bxc0w10);
}
html.ane69xz ._16bxc0w1t {
  --_16bxc0w15: var(--_16bxc0w11);
}
._16bxc0w1u {
  color: var(--_16bxc0wy);
}
._16bxc0w1v {
  color: var(--_16bxc0wz);
}
._16bxc0w1w {
  color: var(--_16bxc0w10);
}
._16bxc0w1x {
  color: var(--_16bxc0w11);
}
._16bxc0w1y {
  color: var(--_16bxc0w12);
}
._16bxc0w1z {
  color: var(--_16bxc0w13);
}
._16bxc0w20 {
  color: var(--_16bxc0w14);
}
._16bxc0w21 {
  color: var(--_16bxc0w15);
}
._16bxc0w22 {
  color: var(--_16bxc0w16);
}
._16bxc0w23 {
  color: var(--_16bxc0w17);
}
._16bxc0w24 {
  padding-bottom: calc((var(--ko0op49) - var(--ko0op433)) / 2);
  padding-top: calc((var(--ko0op49) - var(--ko0op433)) / 2);
}
._16bxc0w25 {
  padding-bottom: calc((var(--ko0op49) - var(--ko0op43d)) / 2);
  padding-top: calc((var(--ko0op49) - var(--ko0op43d)) / 2);
}
._16bxc0w26 {
  padding-bottom: calc((var(--ko0op49) - var(--ko0op43n)) / 2);
  padding-top: calc((var(--ko0op49) - var(--ko0op43n)) / 2);
}
._16bxc0w27 {
  padding-bottom: calc((var(--ko0op49) - var(--ko0op43x)) / 2);
  padding-top: calc((var(--ko0op49) - var(--ko0op43x)) / 2);
}
@media screen and (min-width: 740px) {
  ._16bxc0w4 {
    --uo8yjc0: var(--ko0op437);
    --uo8yjc1: var(--ko0op438);
    --uo8yjc2: var(--ko0op43a);
    --uo8yjc3: var(--ko0op43b);
  }
  ._16bxc0w7 {
    --uo8yjc0: var(--ko0op43h);
    --uo8yjc1: var(--ko0op43i);
    --uo8yjc2: var(--ko0op43k);
    --uo8yjc3: var(--ko0op43l);
  }
  ._16bxc0wa {
    --uo8yjc0: var(--ko0op43r);
    --uo8yjc1: var(--ko0op43s);
    --uo8yjc2: var(--ko0op43u);
    --uo8yjc3: var(--ko0op43v);
  }
  ._16bxc0wd {
    --uo8yjc0: var(--ko0op441);
    --uo8yjc1: var(--ko0op442);
    --uo8yjc2: var(--ko0op444);
    --uo8yjc3: var(--ko0op445);
  }
  ._16bxc0wg {
    font-size: var(--ko0op437);
    line-height: var(--ko0op438);
  }
  ._16bxc0wh {
    font-size: var(--ko0op43h);
    line-height: var(--ko0op43i);
  }
  ._16bxc0wi {
    font-size: var(--ko0op43r);
    line-height: var(--ko0op43s);
  }
  ._16bxc0wj {
    font-size: var(--ko0op441);
    line-height: var(--ko0op442);
  }
  ._16bxc0wm {
    --uo8yjc0: var(--ko0op44e);
    --uo8yjc1: var(--ko0op44f);
    --uo8yjc2: var(--ko0op44h);
    --uo8yjc3: var(--ko0op44i);
  }
  ._16bxc0wp {
    --uo8yjc0: var(--ko0op44o);
    --uo8yjc1: var(--ko0op44p);
    --uo8yjc2: var(--ko0op44r);
    --uo8yjc3: var(--ko0op44s);
  }
  ._16bxc0ws {
    --uo8yjc0: var(--ko0op44y);
    --uo8yjc1: var(--ko0op44z);
    --uo8yjc2: var(--ko0op451);
    --uo8yjc3: var(--ko0op452);
  }
  ._16bxc0wv {
    --uo8yjc0: var(--ko0op458);
    --uo8yjc1: var(--ko0op459);
    --uo8yjc2: var(--ko0op45b);
    --uo8yjc3: var(--ko0op45c);
  }
  ._16bxc0w24 {
    padding-bottom: calc((var(--ko0op49) - var(--ko0op438)) / 2);
    padding-top: calc((var(--ko0op49) - var(--ko0op438)) / 2);
  }
  ._16bxc0w25 {
    padding-bottom: calc((var(--ko0op49) - var(--ko0op43i)) / 2);
    padding-top: calc((var(--ko0op49) - var(--ko0op43i)) / 2);
  }
  ._16bxc0w26 {
    padding-bottom: calc((var(--ko0op49) - var(--ko0op43s)) / 2);
    padding-top: calc((var(--ko0op49) - var(--ko0op43s)) / 2);
  }
  ._16bxc0w27 {
    padding-bottom: calc((var(--ko0op49) - var(--ko0op442)) / 2);
    padding-top: calc((var(--ko0op49) - var(--ko0op442)) / 2);
  }
}
.tokuiy0 {
  --ko0op40: 24px;
  --ko0op41: 4px;
  --ko0op42: 8px;
  --ko0op43: 12px;
  --ko0op44: 20px;
  --ko0op45: 32px;
  --ko0op46: 48px;
  --ko0op47: 96px;
  --ko0op48: 120px;
  --ko0op49: 44px;
  --ko0op4a: 4px;
  --ko0op4b: 2px;
  --ko0op4c: 4px;
  --ko0op4d: 6px;
  --ko0op4e: 10px;
  --ko0op4f: #e60278;
  --ko0op4g: #f8b1dc;
  --ko0op4h: #fdc221;
  --ko0op4i: #fee384;
  --ko0op4j: #b91e1e;
  --ko0op4k: #fb999a;
  --ko0op4l: #838fa5;
  --ko0op4m: rgba(159, 176, 245, 0.7);
  --ko0op4n: #4964e9;
  --ko0op4o: #9fb0f5;
  --ko0op4p: #1d559d;
  --ko0op4q: #98c9f1;
  --ko0op4r: #2e3849;
  --ko0op4t: #d2d7df;
  --ko0op4s: #fff;
  --ko0op4u: #12784f;
  --ko0op4v: #8bdec5;
  --ko0op4w: #512eaa;
  --ko0op4x: #c6acf5;
  --ko0op4y: 1px;
  --ko0op4z: 2px;
  --ko0op410: 3px;
  --ko0op411: 400px;
  --ko0op412: 660px;
  --ko0op413: 940px;
  --ko0op414: 1280px;
  --ko0op415: #e60278;
  --ko0op416: #f8b1dc;
  --ko0op417: #723d02;
  --ko0op418: #fee384;
  --ko0op419: #b91e1e;
  --ko0op41a: #fb999a;
  --ko0op41b: #4964e9;
  --ko0op41c: #9fb0f5;
  --ko0op41d: #1d559d;
  --ko0op41e: #98c9f1;
  --ko0op41f: #4964e9;
  --ko0op41h: #9fb0f5;
  --ko0op41g: #4964e9;
  --ko0op41i: #512eaa;
  --ko0op41j: #c6acf5;
  --ko0op41k: #2e3849;
  --ko0op41l: #fff;
  --ko0op41m: #12784f;
  --ko0op41n: #8bdec5;
  --ko0op41o: #512eaa;
  --ko0op41p: #c6acf5;
  --ko0op41q: #f57c00;
  --ko0op41r: #5a6881;
  --ko0op41s: hsla(0, 0%, 100%, 0.65);
  --ko0op41t: #f7f8fb;
  --ko0op41u: #0e131b;
  --ko0op41v: #0d3880;
  --ko0op41w: #e60278;
  --ko0op41x: #cd026b;
  --ko0op41y: #fd0585;
  --ko0op41z: #feeffa;
  --ko0op420: #fdd7f3;
  --ko0op421: #fde3f6;
  --ko0op422: #fdc221;
  --ko0op423: #fef8de;
  --ko0op424: #b91e1e;
  --ko0op425: #a31a1a;
  --ko0op426: #db1616;
  --ko0op427: #ffe3e2;
  --ko0op428: #fef3f3;
  --ko0op429: #fcdbdb;
  --ko0op42a: #fde7e7;
  --ko0op42b: #4964e9;
  --ko0op42c: #3251e6;
  --ko0op42d: #5975ff;
  --ko0op42e: #f4f6fe;
  --ko0op42f: #dde3fc;
  --ko0op42g: #e8ecfd;
  --ko0op42h: #1d559d;
  --ko0op42i: #e3f2fb;
  --ko0op42j: #2e3849;
  --ko0op42k: #242c39;
  --ko0op42l: #384459;
  --ko0op42m: #eaecf1;
  --ko0op42n: #f7f8fb;
  --ko0op42o: #e6e9f3;
  --ko0op42p: #eff1f7;
  --ko0op42q: #12784f;
  --ko0op42r: #e2f7f1;
  --ko0op42s: #512eaa;
  --ko0op42t: #f1e8fd;
  --ko0op42u: #fff;
  --ko0op42v: #1c2330;
  --ko0op42w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --ko0op42x: 1456;
  --ko0op42y: 1900;
  --ko0op42z: -500;
  --ko0op430: 0;
  --ko0op431: 2048;
  --ko0op432: 12px;
  --ko0op433: 20px;
  --ko0op434: 8.5313px;
  --ko0op435: -0.4642em;
  --ko0op436: -0.4915em;
  --ko0op437: 12px;
  --ko0op438: 20px;
  --ko0op439: 8.5313px;
  --ko0op43a: -0.4642em;
  --ko0op43b: -0.4915em;
  --ko0op43c: 14px;
  --ko0op43d: 20px;
  --ko0op43e: 9.9531px;
  --ko0op43f: -0.3451em;
  --ko0op43g: -0.3725em;
  --ko0op43h: 14px;
  --ko0op43i: 20px;
  --ko0op43j: 9.9531px;
  --ko0op43k: -0.3451em;
  --ko0op43l: -0.3725em;
  --ko0op43m: 16px;
  --ko0op43n: 24px;
  --ko0op43o: 11.375px;
  --ko0op43p: -0.3809em;
  --ko0op43q: -0.4082em;
  --ko0op43r: 16px;
  --ko0op43s: 24px;
  --ko0op43t: 11.375px;
  --ko0op43u: -0.3809em;
  --ko0op43v: -0.4082em;
  --ko0op43w: 18px;
  --ko0op43x: 28px;
  --ko0op43y: 12.7969px;
  --ko0op43z: -0.4086em;
  --ko0op440: -0.436em;
  --ko0op441: 18px;
  --ko0op442: 28px;
  --ko0op443: 12.7969px;
  --ko0op444: -0.4086em;
  --ko0op445: -0.436em;
  --ko0op446: 400;
  --ko0op447: 600;
  --ko0op448: 700;
  --ko0op449: 28px;
  --ko0op44a: 36px;
  --ko0op44b: 19.9063px;
  --ko0op44c: -0.2737em;
  --ko0op44d: -0.3011em;
  --ko0op44e: 42px;
  --ko0op44f: 44px;
  --ko0op44g: 29.8594px;
  --ko0op44h: -0.1547em;
  --ko0op44i: -0.182em;
  --ko0op44j: 21px;
  --ko0op44k: 32px;
  --ko0op44l: 14.9297px;
  --ko0op44m: -0.3928em;
  --ko0op44n: -0.4201em;
  --ko0op44o: 28px;
  --ko0op44p: 36px;
  --ko0op44q: 19.9063px;
  --ko0op44r: -0.2737em;
  --ko0op44s: -0.3011em;
  --ko0op44t: 21px;
  --ko0op44u: 28px;
  --ko0op44v: 14.9297px;
  --ko0op44w: -0.2975em;
  --ko0op44x: -0.3249em;
  --ko0op44y: 21px;
  --ko0op44z: 28px;
  --ko0op450: 14.9297px;
  --ko0op451: -0.2975em;
  --ko0op452: -0.3249em;
  --ko0op453: 18px;
  --ko0op454: 28px;
  --ko0op455: 12.7969px;
  --ko0op456: -0.4086em;
  --ko0op457: -0.436em;
  --ko0op458: 18px;
  --ko0op459: 28px;
  --ko0op45a: 12.7969px;
  --ko0op45b: -0.4086em;
  --ko0op45c: -0.436em;
  --ko0op45d: 400;
  --ko0op45e: 600;
  --ko0op45f: none;
  --ko0op45g: 24px;
  --ko0op45h: 20px;
  --ko0op45i: transform 0.125s ease, opacity 0.125s ease;
  --ko0op45j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --ko0op45k: scale(0.95);
  --ko0op45l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --ko0op45m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --ko0op45n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._27tacz6 {
  background: var(--_27tacz0);
}
._27tacz7 {
  background: var(--_27tacz1);
}
._27tacz8 {
  background: var(--_27tacz2);
}
._27tacz9 {
  background: var(--_27tacz3);
}
._27tacza {
  background: var(--_27tacz4);
}
._27taczb {
  background: var(--_27tacz5);
}
html:not(.ane69xz) ._27taczc {
  --_27tacz0: var(--ko0op4w);
  --_27tacz1: var(--ko0op4p);
  --_27tacz2: var(--ko0op4u);
  --_27tacz3: var(--ko0op4h);
  --_27tacz4: var(--ko0op4j);
  --_27tacz5: var(--ko0op4n);
}
html:not(.ane69xz) ._27taczd {
  --_27tacz0: var(--ko0op4x);
  --_27tacz1: var(--ko0op4q);
  --_27tacz2: var(--ko0op4v);
  --_27tacz3: var(--ko0op4i);
  --_27tacz4: var(--ko0op4k);
  --_27tacz5: var(--ko0op4o);
}
html.ane69xz ._27tacze {
  --_27tacz0: var(--ko0op4w);
  --_27tacz1: var(--ko0op4p);
  --_27tacz2: var(--ko0op4u);
  --_27tacz3: var(--ko0op4h);
  --_27tacz4: var(--ko0op4j);
  --_27tacz5: var(--ko0op4n);
}
html.ane69xz ._27taczf {
  --_27tacz0: var(--ko0op4x);
  --_27tacz1: var(--ko0op4q);
  --_27tacz2: var(--ko0op4v);
  --_27tacz3: var(--ko0op4i);
  --_27tacz4: var(--ko0op4k);
  --_27tacz5: var(--ko0op4o);
}
._27taczg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._27taczh {
  width: var(--ko0op4e);
}
._27taczi {
  width: var(--ko0op4a);
}
._19zwblo0 {
  margin-bottom: -0.1em;
}
._19zwblo2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._19zwblo0 ._19zwblo2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._19zwblo4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_19zwblo3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__ane69xz,html.sprinkles_darkMode__ane69xz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__tokuiy0 typography_lightModeTone_light__16bxc0w18 typography_darkModeTone_dark__16bxc0w1b">
+        <div class="reset_base__lgtsqz0 sprinkles_paddingBottom_gutter_mobile__ane69x7i sprinkles_paddingTop_gutter_mobile__ane69x6e sprinkles_paddingLeft_gutter_mobile__ane69x9q sprinkles_paddingRight_gutter_mobile__ane69x8m sprinkles_position_relative_mobile__ane69x5e typography_lightModeTone_light__16bxc0w18 typography_darkModeTone_dark__16bxc0w1b sprinkles_background_surface_lightMode__ane69x32 sprinkles_background_surfaceDark_darkMode__ane69x35">
+          <span class="reset_base__lgtsqz0 sprinkles_display_block_mobile__ane69x4y typography_fontFamily__16bxc0w0 typography_fontWeight_regular__16bxc0w1 typography_tone_neutral__16bxc0w21 capsize_capsizeStyle__uo8yjc4 typography_textSize_large__16bxc0wd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
